# testCMake

./: README.md
mytmp/: CMakeLists.txt  main.cpp
mytmp/sqrt/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main  main.cpp  myadd.cpp  myaddex.cpp  myaddex.h
step1/: CMakeLists.txt  main.cpp
step10/: CMakeLists.txt
step10/MathFunctions/: CMakeLists.txt
step11/: CMakeLists.txt
step11/MathFunctions/: CMakeLists.txt
step12/: CMakeLists.txt  Tutorial-1.0-Linux.sh  cmake.txt
step12/MathFunctions/: CMakeLists.txt  mysqrt.h
step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  cmake_install.cmake  install_manifest.txt
step12/debug/MathFunctions/: Makefile  cmake_install.cmake
step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  cmake_install.cmake  install_manifest.txt
step12/release/MathFunctions/: Makefile  cmake_install.cmake
step2/: CMakeLists.txt  main.cpp
step2/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step3/: CMakeLists.txt  cmake.txt  main.cpp
step3/MathFunctions/: CMakeLists.txt
step4/: CMakeLists.txt  cmake.txt  main.cpp
step4/MathFunctions/: CMakeLists.txt  mysqrt.h
step5/: CMakeLists.txt  main.cpp
step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
step7/: CMakeLists.txt
step7/MathFunctions/: CMakeLists.txt  mysqrt.h
step8/: CMakeLists.txt  CTestConfig.cmake  cmake.txt  main.cpp
step8/MathFunctions/: mysqrt.cxx
step9/: CMakeLists.txt
step9/MathFunctions/: CMakeLists.txt  mysqrt.cxx
